fixed flickering on load

--- a/default.css
+++ b/default.css
@@ -31,6 +31,9 @@
       padding: 20px;
       background: var(--bg);
       color: var(--text);
+    }
+
+    body.loaded {
       transition: 0.3s;
     }
 
